<resources>
    <string name="app_name">JournalApp</string>
    <string name="welcome_to_the_journal">Welcome to the Journal</string>
    <string name="email">email:</string>
    <string name="sign_in">sign in</string>
    <string name="password">password:</string>
    <string name="create_account">create account</string>
    <string name="username">username</string>
    <string name="no_posts">No Posts</string>
    <string name="date_created">Date created</string>
    <string name="description">Description...</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="sign_out">sign out</string>
</resources>